# robot-skills

./: README.md
core_communication_msgs/: CMakeLists.txt  package.xml
core_communication_msgs/msg/: BeckhoffDigitalSignal.msg  BeckhoffPortDescription.msg  BeckhoffTerminalDescription.msg  BioRobControlState.msg  BioRobElectricalState.msg  BioRobExecutionState.msg  BioRobJointState.msg  BioRobJointTrajectory.msg  BioRobJointTrajectoryPoint.msg  BioRobModelCalculations.msg  BioRobTimingInfo.msg  BioRobTrajectoryExecutionState.msg  ControlError.msg  ControlLoop.msg  DigitalSignal.msg  GripperAction.msg  GripperState.msg  Parameter.msg  ProcessExecutionCommands.msg  ProcessExecutionState.msg  RecordingExecutionCommands.msg  SystemInitialization.msg  SystemState.msg  TrajectoryExecutionCommands.msg  TrajectorySpeedControl.msg  TrajectoryTargetReceivingAck.msg  robotInitialization.msg
core_communication_msgs/msg_gen/lisp/: BeckhoffDigitalSignal.lisp  BeckhoffPortDescription.lisp  BeckhoffTerminalDescription.lisp  BioRobControlState.lisp  BioRobElectricalState.lisp  BioRobExecutionState.lisp  BioRobJointState.lisp  BioRobJointTrajectory.lisp  BioRobJointTrajectoryPoint.lisp  BioRobModelCalculations.lisp  BioRobTimingInfo.lisp  BioRobTrajectoryExecutionState.lisp  ControlError.lisp  ControlLoop.lisp  DigitalSignal.lisp  GripperAction.lisp  GripperState.lisp  Parameter.lisp  ProcessExecutionCommands.lisp  ProcessExecutionState.lisp  RecordingExecutionCommands.lisp  SystemInitialization.lisp  SystemState.lisp  TrajectoryExecutionCommands.lisp  TrajectorySpeedControl.lisp  TrajectoryTargetReceivingAck.lisp  _package.lisp  _package_BeckhoffDigitalSignal.lisp  _package_BeckhoffPortDescription.lisp  _package_BeckhoffTerminalDescription.lisp  _package_BioRobControlState.lisp  _package_BioRobElectricalState.lisp  _package_BioRobExecutionState.lisp  _package_BioRobJointState.lisp  _package_BioRobJointTrajectory.lisp  _package_BioRobJointTrajectoryPoint.lisp  _package_BioRobModelCalculations.lisp  _package_BioRobTimingInfo.lisp  _package_BioRobTrajectoryExecutionState.lisp  (+17 more)
core_communication_srvs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
core_communication_srvs/srv/: ActiveProcessAsstring.srv  BasicRobotInfos.srv  BasicTrajInfos.srv  BeckhoffDevices.srv  ConnectionEnableStatus.srv  ControlLoop.srv  GripperInfo.srv  IODevices.srv  JointConstraints.srv  Parameter.srv  PickUpPose.srv  TrajectoryDuration.srv
dmp_trajectory/: CMakeLists.txt  package.xml
dmp_trajectory/robots/: x5.rounded.dae  x5.xml  x6.dae  x6.rounded.dae  x6.xml
dmp_trajectory/src/: dmp_func.py  opt_mp.py
kalman_tracker/: CMakeLists.txt  package.xml  setup.py
kalman_tracker/src/: cython_tracker.pyx  kalman_tracker_node.py  python_tracker.py  setup.py
katana_driver/: .gitignore  README.md  rosdep.yaml  stack.xml
katana_driver/katana/: CMakeLists.txt  mainpage.dox  manifest.xml
katana_driver/katana_arm_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml
katana_driver/katana_description/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
katana_driver/katana_description/collada/: README.txt  katana_300_6m180.dae  katana_300_6m180.robot.xml  katana_400_6m180.robot.xml  katana_450_6m90a.dae  katana_450_6m90a.robot.xml  katana_450_6m90b.dae  katana_450_6m90b.robot.xml
katana_driver/katana_description/launch/: katana_debug_urdf.launch  upload_katana_300_6m180.launch  upload_katana_400_6m180.launch  upload_katana_450_6m90a.launch  upload_katana_450_6m90b.launch
katana_driver/katana_description/meshes/katana/: katana_base_link.stl  katana_gripper_l_finger.stl  katana_gripper_link.stl  katana_gripper_r_finger.stl  katana_internal_controlbox.stl  katana_motor1_pan_link.stl  katana_motor2_lift_link.stl  katana_motor3_lift_link.stl  katana_motor4_lift_link.stl  katana_motor5_wrist_roll_link.stl
katana_driver/katana_description/params/: dependent_joints.yaml
katana_driver/katana_description/rviz/: katana_description.rviz
katana_driver/katana_description/urdf/: controlbox.urdf.xacro  gazebo.urdf.xacro  katana_300_6m180.urdf.xacro  katana_300_6m180_with_controlbox.urdf.xacro  katana_400_6m180.urdf.xacro  katana_400_6m180_with_controlbox.urdf.xacro  katana_450_6m90a.urdf.xacro  katana_450_6m90a_with_controlbox.urdf.xacro  katana_450_6m90b.urdf.xacro  katana_450_6m90b_with_controlbox.urdf.xacro  transmissions.urdf.xacro
katana_driver/katana_gazebo_plugins/: CMakeLists.txt  mainpage.dox  manifest.xml
katana_driver/katana_kinect_calibration/: mainpage.dox  manifest.xml
katana_driver/katana_moveit_ikfast_plugin/: CMakeLists.txt  katana_moveit_ikfast_plugin_description.xml  package.xml
katana_driver/katana_moveit_ikfast_plugin/src/: katana_450_6m90a_ikfast_plugin.cpp  katana_450_6m90a_ikfast_solver.cpp
katana_driver/katana_msgs/: .gitignore  mainpage.dox  manifest.xml
katana_driver/katana_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
katana_driver/katana_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml
katana_driver/kni/: CMakeLists.txt  mainpage.dox  manifest.xml
natnet_node/: CMakeLists.txt  README.md  package.xml
natnet_node/launch/: optitrack.launch
natnet_node/msg/: optitrack.msg  rigid_bodies.msg  unid_markers.msg
natnet_node/src/: CMakeLists.txt  natnet_node.cpp
optitrack_to_biorob_tf/: CMakeLists.txt  package.xml
optitrack_to_biorob_tf/src/: fixed_optitrack_to_biorob_tf_node.py  optitrack_to_biorob_tf_node.py
rl_node/: README.md  crkr_anms_v2.jl  crkr_node_mult.jl
x6_common/.svn/: all-wcprops  entries
x6_common/x6_description/: mainpage.dox  manifest.xml
x6_control/: CMakeLists.txt  package.xml
x6_control/config/: x6_control.yaml
x6_control/launch/: x6_control.launch
x6_gazebo/: CMakeLists.txt  README_MODELS  gazebo.material  package.xml
x6_gazebo/launch/: arm.world  gz5_improved_tracker.launch  improved_tracker.launch  x5.launch  x5_sim.launch  x6_perfect_tracker.launch
x6_gazebo/ping_pong_ball/: model-1_4.sdf  model.config
x6_gazebo/table/: model-1_4.sdf  model.config
x6_gazebo/worlds/: arm.world  gz5_arm.world
(+265 files in other folders)
